--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.8",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.0",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "immer": "^6.0.3",
@@ -19,12 +22,12 @@
     "react": "16.11.0",
     "react-native": "^0.62.1",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.7.1",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.4.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^2.9.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.7",
+    "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
